dart_code 불필요 요소 제거