@@ -2,6 +2,7 @@ package initial;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -12,22 +13,15 @@ import java.util.zip.ZipInputStream;
 
 public class dart_code_update {
     private static final String key = ""; // 입력하고 개발
+    private static final String testDir = "D:\\Drive\\Code\\bacado\\";
     public List<List<String>> financial_save;
     public static void Dart_code_update() throws IOException {
         String url_plus1 = "https://opendart.fss.or.kr/api/corpCode.xml?crtfc_key=" + key;
         URL url1 = new URL(url_plus1);
         //
-        Path zipFile = Files.createTempFile("dart_code", ".zip"); // \AppData\Local\Temp
-        Files.write(zipFile, url1.openStream().readAllBytes());
-        //
-        byte[] buf = Files.readAllBytes(zipFile);
-        ZipInputStream zipInputStream = new ZipInputStream((new ByteArrayInputStream(buf)));
+        InputStream inputStream = new ByteArrayInputStream(url1.openStream().readAllBytes());
+        ZipInputStream zipInputStream = new ZipInputStream(inputStream);
         ZipEntry zipEntry = null;
-        //
-        String testDir = "D:\\Drive\\Code\\bacado\\";
-        String fileName = "CORPCODE.xml";
-        Path path = Path.of(testDir+fileName);
-        Files.deleteIfExists(path);
         //
         while((zipEntry = zipInputStream.getNextEntry()) != null){
             Files.copy(zipInputStream, Paths.get(testDir + zipEntry.getName()));
@@ -36,6 +30,5 @@ public class dart_code_update {
         zipInputStream.closeEntry();;
         zipInputStream.close();
         //
-        Files.delete(zipFile);
     }
 }
